--- a/styles/style.css
+++ b/styles/style.css
@@ -71,10 +71,10 @@ img {
   margin: 0 auto;
   background-color: #ffffff;
   width: 1200px;
-  box-shadow: 0 0 15px hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-/* HEADER START*/
+/* HEADER START */
 
 .main-header {
   position: relative;
@@ -86,7 +86,6 @@ img {
 .all-navigation {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   align-content: center;
 }
@@ -103,7 +102,6 @@ img {
 .navigation {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 600px;
   margin-left: 168px;
@@ -134,18 +132,17 @@ img {
 }
 
 .navigation-link:hover:not(.current-link) {
-  color: hsla(0, 0%, 0%, 0.678);
+  color: rgba(0, 0, 0, 0.678);
   border-bottom: 3px solid #756257;
 }
 
 .navigation-link:active:not(.current-link) {
-  color: hsla(0, 0%, 0%, 0.553);
+  color: rgba(0, 0, 0, 0.553);
 }
 
 .button-nav-list {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   align-items: center;
   margin-left: 24px;
@@ -213,7 +210,7 @@ img {
 
 /* HEADER END */
 
-/* SUBSCRIBE START*/
+/* SUBSCRIBE START */
 
 .subscribe,
 .light-subscribe {
@@ -301,9 +298,9 @@ img {
   outline-offset: 0;
 }
 
-/* SUBSCRIBE END*/
+/* SUBSCRIBE END */
 
-/* FOOTER START*/
+/* FOOTER START */
 
 .footer {
   display: -webkit-box;
@@ -324,7 +321,6 @@ img {
 .social-list {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 148px;
   list-style: none;
@@ -344,11 +340,11 @@ img {
 }
 
 .social-item path:active {
-  fill: hsla(204, 48%, 60%, 0.302);
+  fill: rgba(104, 163, 202, 0.302);
 }
 
 .social-item path:disabled {
-  fill: #d8d7d7;
+  fill: #e5e5e5;
 }
 
 .phone a {
@@ -373,7 +369,7 @@ img {
 }
 
 .phone a:disabled {
-  color: #d8d7d7;
+  color: #e5e5e5;;
 }
 
 .htmlacademy {
@@ -386,16 +382,16 @@ img {
 }
 
 .htmlacademy:active path {
-  fill: hsla(20, 15%, 40%, 0.302);
+  fill: rgba(117, 97, 87, 0.302);
 }
 
 .htmlacademy:disabled path {
-  fill: #d8d7d7;
+  fill: #e5e5e5;
 }
 
-/* FOOTER END*/
+/* FOOTER END */
 
-/* BUTTONS START*/
+/* BUTTONS START */
 
 /* BROWN BUTTON */
 .button-brown {
@@ -411,7 +407,7 @@ img {
 }
 
 .button-brown:active {
-  color: hsla(0, 0%, 100%, 0.302);
+  color: rgba(255, 255, 255, 0.302);
 }
 
 .button-brown:disabled {
@@ -433,7 +429,7 @@ img {
 }
 
 .button-blue:active:not(.pagination-current, .pagination-etc) {
-  color: hsla(0, 0%, 100%, 0.302);
+  color: rgba(255, 255, 255, 0.302);
   background-color: #82b3d3;
 }
 
@@ -441,15 +437,15 @@ img {
   background: #e5e5e5;
 }
 
-/* BUTTONS END*/
+/* BUTTONS END */
 
-/* MODAL START*/
+/* MODAL START */
 
 .modal-container {
   position: fixed;
   display: -webkit-box;
   display: flex;
-  background-color: hsla(0, 0%, 95%, 0.8);
+  background-color: rgba(242, 242, 242, 0.8);
   top: 0;
   left: 0;
   width: 100%;
@@ -462,7 +458,7 @@ img {
   position: relative;
   margin: auto;
   background-color: #ffffff;
-  box-shadow: 0 25px 50px hsla(0, 0%, 0%, 0.149);
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.149);
   border-radius: 30px;
   padding: 63px 67px 65px 72px;
   width: 717px;
@@ -523,7 +519,7 @@ img {
 
 .button-close:active path {
   background-color: #e6e6e6;
-  fill: hsla(0, 0%, 0%, 0.239);
+  fill: rgba(0, 0, 0, 0.239);
 }
 
 .modal-content-arrival,
@@ -572,8 +568,8 @@ img {
 }
 
 .field-data:disabled {
-  border: 3px solid #d8d7d7;
-  background-color: #d8d7d7;
+  border: 3px solid #e5e5e5;
+  background-color: #e5e5e5;
 }
 
 .modal-content-people {
@@ -674,7 +670,7 @@ img {
   padding: 19px 22px 22px;
   border-radius: 10px;
   background-color: #333333;
-  box-shadow: 0 15px 30px 0 hsla(0, 0%, 0%, 0.302);
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.302);
   width: 256px;
   transform: translateX(-45%) translateY(10%);
 }
@@ -714,7 +710,7 @@ img {
   line-height: 24px;
 }
 
-/* MODAL END*/
+/* MODAL END */
 
 /* Chrome, Safari, FireFox for input[type='number'] */
 input[type='number']::-webkit-outer-spin-button,
@@ -751,8 +747,7 @@ input[type='number'] {
 .about-sedona {
   display: -webkit-box;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -784,7 +779,6 @@ input[type='number'] {
 .advantage-advice {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   list-style: none;
   padding-left: 0;
@@ -811,7 +805,7 @@ input[type='number'] {
   min-height: 385px;
   padding: 110px 85px 90px;
   text-align: center;
-  background-color: hsla(204, 48%, 67%, 0.122);
+  background-color: rgba(130, 179, 211, 0.122);
 }
 
 .advantage-item:first-child,
@@ -823,7 +817,7 @@ input[type='number'] {
 }
 
 .advantage-item:nth-child(4) {
-  background-color: hsla(204, 48%, 67%, 0.2);
+  background-color: rgba(130, 179, 211, 0.2);
 }
 
 .advantage-img {
@@ -844,7 +838,7 @@ input[type='number'] {
   content: " ";
   display: block;
   margin: 30px auto;
-  border-bottom: 2px solid hsla(0, 0%, 0%, 0.302);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.302);
   width: 60px;
 }
 
@@ -852,7 +846,7 @@ input[type='number'] {
 .advantage-item:nth-child(7) p::before {
   content: " ";
   display: block;
-  border-bottom: 2px solid hsla(0, 0%, 100%, 0.302);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.302);
   width: 60px;
   margin: 0 auto 30px;
 }
@@ -890,7 +884,7 @@ input[type='number'] {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-  margin: 105px 0 30px 0;
+  margin: 105px 0 30px;
 }
 
 .advantage-advice-item {
@@ -900,7 +894,7 @@ input[type='number'] {
   text-align: center;
   font-size: 18px;
   line-height: 21px;
-  background-color: hsla(204, 48%, 67%, 0.122);
+  background-color: rgba(130, 179, 211, 0.122);
 }
 
 .advantage-advice-item:nth-child(2n) {
@@ -1024,11 +1018,15 @@ input[type='number'] {
 }
 
 .filter-hotel-link:hover {
-  color: hsla(0, 0%, 100%, 0.565);
+  color: rgba(255, 255, 255, 0.565);
 }
 
 .filter-hotel-link:active {
-  color: hsla(0, 0%, 100%, 0.302);
+  color: rgba(255, 255, 255, 0.302);
+}
+
+.filter-hotel-link:disabled {
+  color: #e5e5e5;;
 }
 
 /* FILTERS */
@@ -1077,9 +1075,6 @@ input[type='number'] {
   font-size: 18px;
   font-weight: 400;
   line-height: 23px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   cursor: pointer;
 }
@@ -1134,7 +1129,7 @@ input[type='number'] {
 
 .checkbox-container:disabled,
 .radio-container:disabled {
-  background-color: black;
+  color: #e5e5e5;;
 }
 
 /* CHECKBOX, RADIO END */
@@ -1175,7 +1170,7 @@ input[type='number'] {
 }
 
 .price-form-name {
-  color: hsla(0, 0%, 0%, 0.114);
+  color: rgba(0, 0, 0, 0.114);
   font-family: inherit;
   position: absolute;
   font-weight: 400;
@@ -1207,7 +1202,6 @@ input[type='number'] {
 .filter-form:nth-child(3) {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: 70px;
 }
@@ -1219,7 +1213,7 @@ input[type='number'] {
   margin-top: 43px;
   position: relative;
   height: 4px;
-  background-color: hsla(0, 0%, 100%, 0.145);
+  background-color: rgba(255, 255, 255, 0.145);
   width: 287px;
 }
 
@@ -1275,11 +1269,11 @@ input[type='number'] {
 .reset {
   padding: 8px 57px;
   color: #ffffff;
-  border: 3px solid hsla(0, 0%, 0%, 0);
+  border: 3px solid rgba(0, 0, 0, 0);
 }
 
 .reset:hover {
-  color: hsla(0, 0%, 100%, 0.553);
+  color: rgba(255, 255, 255, 0.553);
 }
 
 .reset:focus {
@@ -1288,7 +1282,7 @@ input[type='number'] {
 }
 
 .reset:active {
-  color: hsla(0, 0%, 100%, 0.302);
+  color: rgba(255, 255, 255, 0.302);
 }
 
 .apply {
@@ -1323,7 +1317,6 @@ input[type='number'] {
 .catalog h2 {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   text-transform: uppercase;
   font-weight: 700;
@@ -1364,8 +1357,8 @@ input[type='number'] {
 }
 
 .select-control:disabled {
-  border: 2px solid hsla(0, 0%, 0%, 0.302);
-  color: hsla(0, 0%, 0%, 0.302);
+  border: 2px solid rgba(0, 0, 0, 0.302);
+  color: rgba(0, 0, 0, 0.302);
 }
 
 
@@ -1380,7 +1373,6 @@ input[type='number'] {
 .layout-list {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   min-width: 160px;
   max-width: 230px;
@@ -1435,7 +1427,6 @@ input[type='number'] {
 .hotels-list {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
@@ -1506,7 +1497,7 @@ input[type='number'] {
   justify-self: end;
 }
 
-/* BUTTONS ON CARDS START*/
+/* BUTTONS ON CARDS START */
 
 .button-more,
 .button-favorite,
@@ -1524,7 +1515,6 @@ input[type='number'] {
 .button-more {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 140px;
   justify-content: center;
@@ -1537,7 +1527,7 @@ input[type='number'] {
 }
 
 .button-more-link:active {
-  color: hsla(0, 0%, 100%, 0.302);
+  color: rgba(255, 255, 255, 0.302);
 }
 
 .button-favorite {
@@ -1561,14 +1551,14 @@ input[type='number'] {
 
 .button-favorite-choose:active {
   background-color: #7db54f;
-  color: hsla(0, 0%, 100%, 0.302);
+  color: rgba(255, 255, 255, 0.302);
 }
 
 .button-favorite-choose:disabled {
   background: #e5e5e5;
 }
 
-/* BUTTONS ON CARDS END*/
+/* BUTTONS ON CARDS END */
 
 /* RANK START */
 .rank {
@@ -1608,7 +1598,6 @@ input[type='number'] {
 .pagination {
   display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   max-width: 1060px;
   margin: 0;
@@ -1621,7 +1610,7 @@ input[type='number'] {
   display: block;
   min-width: 60px;
   height: 60px;
-  padding: 12px 12px;
+  padding: 12px;
   background-color: #82b3d3;
   border-radius: 4px;
   text-align: center;
